# PackageMaker: Make and publish packages using an intuitive interface.
# Copyright © 2022  Nathan A. Munn.  All rights reserved.
# 
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; specifically, version 2 of the License only.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License along
# with this program; if not, write to the Free Software Foundation, Inc.,
# 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.

[metadata]
name = PackageMaker
version = 0.0.0
description = Make and publish packages using an intuitive interface.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = package, module, make, publish
license = GNU GPL v2.0
license_files = LICENSE
url = https://github.com/The3Null4Player613310/PackageMaker
author = Nathan A. Munn
author_email = The3Null4Player613310@gmail.com
maintainer = Nathan A. Munn
maintainer_email = The3Null4Player613310@gmail.com
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v2 (GPLv2)

[options]
python_requires = >=3.0
zip_safe = False
packages = find:
install_requires =
	setuptools

[options.entry_points]
# console_scripts =
# 	PackageMaker = PackageMaker.cli

# gui_scripts =
# 	PackageMakerGUI = PackageMaker.gui
